--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/styles.index.css">
-    <title>Blog | LS</title>
+    <title>Blog | MP</title>
 </head>
 <body>
-    <h1>Luan Santana Lindo</h1>
+     <header>
+        <div id="logo">
+        <p>Logo Aqui</p>
+    </div>
 
-    <h3>ls gato demais</h3>
+        <div id="links"
+        <p>Vários Links</p>
+        </div>
+    </header>
 </body>
 </html>
