--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 <body>
      <header>
         <div id="logo">
-        <p>Logo Aqui</p>
+        <img 
+        id="logo-img"
+        src="assets/imagens/logo.jpg" 
+        alt="logo do site violeta clean">
+        
     </div>
 
         <div id="links"
-        <p>Vários Links</p>
+        <a href="#home">Home</a>
+        <a href="#main">Principais</a>
+        <a href="#news">Ultimas Noticias</a>
+        <a href="#autor">Autor</a>
+        <a href="#contact">Contato</a>
         </div>
     </header>
 </body>
