--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
     </div>
 
-        <div id="links"
+        <div id="links">
         <a href="#home">Home</a>
         <a href="#main">Principais</a>
         <a href="#news">Ultimas Noticias</a>
@@ -25,4 +25,4 @@
         </div>
     </header>
 </body>
-</html>
+</html>     
